# portopt

./: .dockerignore  .gitignore  01_fichamento_corpus.md  02_arquitetura.md  03_status_fase0.md  04_design_educacional.md  05_status_fase1.md  06_publishing_checklist.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  apply_phase2.py  fly.toml
.github/workflows/: ci.yml  deploy-api.yml  deploy-frontend.yml
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/public/: 404.html
frontend/src/: App.tsx  main.tsx  vite-env.d.ts
frontend/src/components/: ModelCard.tsx  PedagogyBlock.tsx
frontend/src/lib/: api.ts
portopt/: README.md  pyproject.toml
portopt/notebooks/: 00_quick_tour.ipynb  01_validation_chagas.ipynb
portopt/portopt/: __init__.py  backtest.py  cli.py  compare.py  costs.py  data.py  datasets.py  estimators.py  metrics.py  returns.py  risk_measures.py  viz.py
portopt/portopt/api/: __init__.py  main.py  pedagogy.py  schemas.py  services.py  settings.py
portopt/portopt/api/routes/: __init__.py  backtest.py  compare.py  data.py  datasets.py  health.py  models.py  optimize.py
portopt/portopt/data_files/bundled/: Ex1.xlsx  MCVaR_Example.xls
portopt/portopt/data_files/chagas_2024/: MDR_Example.xlsx
portopt/portopt/models/: __init__.py  base.py  black_litterman.py  cdar.py  cvar.py  downside.py  erc.py  hrp.py  mad.py  markowitz.py  naive.py  risk_budget.py  tracking.py  utility.py
portopt/tests/: test_api.py  test_golden_chagas.py  test_golden_datasets.py  test_smoke.py
(+7 files in other folders)
